Istio/02-Traffic_management/__XX-TLS-PASSTHROUGH/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    #    istio: myingressgateway
    istio: ingressgateway
  servers:
    #    - port:
    #        number: 443
    #        name: secure-http2
    #        protocol: HTTP2
    #      hosts:
    #        - "*"
    - port:
        number: 80
        name: http2-i
        protocol: HTTP2
      hosts:
        - "*"
    - port:
        number: 443
        name: https-i
        protocol: HTTPS
      hosts:
        - "*"
      tls:
#        credentialName: my-tls-cert-secret
#        minProtocolVersion: TLSV1_2
        #
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "lb.net"
  gateways:
    - helloworld-gateway
  http:
    - name: http-vs
      match:
        - port: 80
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8080
#    - name: https-vs
#      match:
#        - port: 443
#      route:
#        - destination:
#            host: helloworld.default.svc.cluster.local
#            port:
#              number: 8443
  tls:
    - match:
        - port: 443
          sniHosts: ["lb.net"]
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
  namespace: default
spec:
  host: helloworld.default.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8080
        tls:
          mode: DISABLE

      - port:
          number: 8443
        tls:
          mode: DISABLE
